fix(bulkSearch): add workaround for the highcharts tooltip
the tooltip was cut off, if the containtaining div and svg were too small for it, so I added a workaround: the div and the svg now both have the property overflow: visible !important

--- a/frontend/css/bulkSearch.css
+++ b/frontend/css/bulkSearch.css
@@ -10,3 +10,12 @@
     font-size: 1.2rem !important;
     text-decoration: none !important;
 }
+
+/* workaround so that the highcharts tooltip is not cut off*/
+.highcharts-container {
+    overflow: visible !important;
+}
+
+.highcharts-container svg {
+    overflow: visible !important;
+}
